<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sign_in_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@android:color/white">

        <ImageView
            android:id="@+id/background_image"
            android:src="@drawable/background_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/login_image_description"
            app:layout_constraintTop_toTopOf="@id/sign_in_layout"
            app:layout_constraintLeft_toLeftOf="@id/sign_in_layout"
            app:layout_constraintRight_toRightOf="@id/sign_in_layout"
            android:layout_marginTop="25dp"/>

        <TextView
            style="@style/main_header"
            android:id="@+id/login_main_header"
            android:text="@string/login_header_text"
            android:layout_marginBottom="80dp"

            app:layout_constraintBottom_toBottomOf="@id/background_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            style="@style/text"
            android:id="@+id/login_second_header"
            android:text="@string/login_second_header_text"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="@id/background_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_enter_email_layout"
            style="@style/textEditLayout"
            android:layout_marginTop="60dp"
            android:hint="@string/login_enter_email_text"
            app:layout_constraintTop_toBottomOf="@id/background_image"
            app:layout_constraintLeft_toLeftOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_enter_email"
                style="@style/textEdit"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/textEditLayout"
            android:id="@+id/login_password_layout"
            android:hint="@string/login_password_text"
            app:layout_constraintTop_toBottomOf="@id/login_enter_email_layout"
            app:layout_constraintLeft_toLeftOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                style="@style/textEdit"/>
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/login_remember_me_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_password_layout"
            app:layout_constraintLeft_toLeftOf="@id/login_password_layout"/>

        <TextView
            style="@style/text"
            android:id="@+id/login_checkbox_text"
            android:text="@string/login_checkbox_text"
            app:layout_constraintTop_toBottomOf="@id/login_password_layout"
            app:layout_constraintBottom_toBottomOf="@id/login_remember_me_checkbox"
            app:layout_constraintLeft_toRightOf="@id/login_remember_me_checkbox"/>

        <TextView
            style="@style/text"
            android:id="@+id/login_forget_password_text"
            android:text="@string/login_forgot_password_text"
            android:textColor="@color/bluish_purple"
            app:layout_constraintTop_toBottomOf="@id/login_password_layout"
            app:layout_constraintBottom_toBottomOf="@id/login_remember_me_checkbox"
            app:layout_constraintRight_toRightOf="@id/login_password_layout"/>

        <com.google.android.material.button.MaterialButton
            style="@style/button"
            android:id="@+id/login_button"
            android:text="@string/proceed_button_text"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            style="@style/text"
            android:id="@+id/login_footer_start"
            android:text="@string/login_footer_start"
            android:textSize="20sp"
            android:layout_marginStart="80dp"

            app:layout_constraintTop_toBottomOf="@id/login_button"
            app:layout_constraintStart_toStartOf="@id/login_button"
            app:layout_constraintEnd_toStartOf="@id/login_footer_link"/>

        <TextView
            style="@style/text"
            android:id="@+id/login_footer_link"
            android:text="@string/login_register_text"
            android:textSize="20sp"
            android:textColor="@color/bluish_purple"

            app:layout_constraintTop_toBottomOf="@id/login_button"
            app:layout_constraintStart_toEndOf="@id/login_footer_start"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>