<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/background_image"
            android:src="@drawable/background_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/login_image_description"
            app:layout_constraintTop_toTopOf="@id/register_layout"
            app:layout_constraintLeft_toLeftOf="@id/register_layout"
            app:layout_constraintRight_toRightOf="@id/register_layout"
            android:layout_marginTop="25dp"/>

        <TextView
            style="@style/main_header"
            android:id="@+id/register_main_header"
            android:text="@string/register_main_header_text"
            android:layout_marginBottom="80dp"

            app:layout_constraintBottom_toBottomOf="@id/background_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            style="@style/text"
            android:id="@+id/register_second_header"
            android:text="@string/register_second_header_text"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="@id/background_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/textEditLayout"
            android:id="@+id/register_name_layout"
            android:hint="@string/register_full_name_text"
            android:layout_marginBottom="-40dp"
            app:layout_constraintBottom_toBottomOf="@id/background_image"
            app:layout_constraintLeft_toLeftOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/textEdit"
                android:id="@+id/register_name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/textEditLayout"
            android:id="@+id/register_email_layout"
            android:hint="@string/register_valid_email_text"
            app:layout_constraintTop_toBottomOf="@id/register_name_layout"
            app:layout_constraintLeft_toLeftOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/textEdit"
                android:id="@+id/register_email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/textEditLayout"
            android:id="@+id/register_phone_number_layout"
            android:hint="@string/register_phone_number_text"
            app:layout_constraintTop_toBottomOf="@id/register_email_layout"
            app:layout_constraintLeft_toLeftOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/textEdit"
                android:id="@+id/register_phone_number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/textEditLayout"
            android:id="@+id/register_password_layout"
            android:hint="@string/register_strong_password_text"
            app:layout_constraintTop_toBottomOf="@id/register_phone_number_layout"
            app:layout_constraintLeft_toLeftOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/textEdit"
                android:id="@+id/register_password"/>
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/register_terms_conditions_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/register_password_layout"
            app:layout_constraintLeft_toLeftOf="@id/register_password_layout"/>

        <TextView
            style="@style/text"
            android:id="@+id/register_checkbox_text"
            android:text="@string/register_checkbox_text"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/register_password_layout"
            app:layout_constraintBottom_toBottomOf="@id/register_terms_conditions_checkbox"
            app:layout_constraintLeft_toRightOf="@id/register_terms_conditions_checkbox"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            style="@style/button"
            android:layout_marginLeft="28dp"
            android:text="@string/proceed_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            style="@style/text"
            android:id="@+id/register_footer_start"
            android:text="@string/register_footer_start"
            android:textSize="20sp"
            android:layout_marginStart="60dp"

            app:layout_constraintTop_toBottomOf="@id/register_button"
            app:layout_constraintStart_toStartOf="@id/register_button"
            app:layout_constraintEnd_toStartOf="@id/register_footer_link"/>

        <TextView
            style="@style/text"
            android:id="@+id/register_footer_link"
            android:text="@string/register_footer_login"
            android:textSize="20sp"
            android:textColor="@color/bluish_purple"

            app:layout_constraintTop_toBottomOf="@id/register_button"
            app:layout_constraintStart_toEndOf="@id/register_footer_start"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>